
     Following meta event commands are available:
     - RgbLedClearAll (clears all LEDs)
     - RgbLedSetRgb:<led>:<r>:<g>:<b> (led=1..64, r/g/b=0..255)
     - RgbLedSetHsv:<led>:<h>:<s>:<v> (led=1..64, h=0..359, s=0..100, v=0..100)
     - RgbLedRainbow:<speed>:<brightness> (speed=1..255, brightness=0..100)

    Most simple way to test a LED strip: enter following command in MIOS Terminal
       ngr exec_neta RgbLedRainbow:9:100
    (don't forget to wear sunglasses, or start with brightness 20!!! ;-)

   o SRIO num_sr=<value> reconfiguration works correctly with DIN/DOUT matrices now

   o .NGR file: added "load <setup>" command which allows to switch to another setup (.NGC, .NGS, .NGR, ... files)

   o implemented new meta command "SendEvent" which allows to remote control one or more events from a single event
     within a given value range and direction.
     See cfg/test/metalrn.ngc for a usage example

   o implemented new meta command "LearnEvent" which allows to learn SendEvent based controller assignments during runtime.
     See cfg/test/metalrn.ngc for a usage example

   o added new meta command "SaveDelayedSnapshot:<seconds>"
     It will request to store a snapshot after at least the given seconds.

   o added new event type "NoteOnOff", which will send a NoteOff event immediately after NoteOn (resp. actually it will
     send Note On with velocity 0 for runtime event optimisation)

   o bugfix for DELAY_MS

   o bugfix for fwd_id to a non-existing ID with specific value

   o bugfix for maps with duplicated values

   o bugfix for sporadic file access errors reported during snapshot restore


MIDIbox NG V1.032
~~~~~~~~~~~~~~~~~

   o support for mathematical operations in .NGR script.
     They have to be surrounded with square-brackets ([...])
     Syntax: [<left-operand><operator><right-operand>]
     Example:
        - set LED:2000 [LED:2000 + 1]
          will increment the value stored in LED:2000
        - set LED:2000 [LED:2000 - 1]